# project1_Shichkin_Mikhail_M25_555

./: Makefile  README.md  main.py  pyproject.toml  start
labyrinth_game/: __init__.py  constants.py  player_actions.py  utils.py
