[project]
name = "project1-shichkin-mikhail-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Shicimiki",email = "shichkinmikhailv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

